# Mesa de Ayuda/MesaDeAyudaRest/src/swagger.json
@@ -123,45 +123,6 @@
           }
         }
       },
-      /*
-      "/logout": {
-        "post": {
-          "tags": [
-            "Users"
-          ],
-          "summary": "Finaliza la session del usuario logueado",
-          "parameters": [
-            {
-              "name": "auth_token",
-              "in": "header",
-              "required": true,
-              "description": "Token de autorizacion",
-              "schema": {
-                "type": "string"
-              }
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "Informacion del usuario",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "type": "object",
-                    "properties": {
-                      "message": {
-                        "type": "string",
-                        "description": "Mensaje devuelto informando que paso con la session"
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
-      */
       "/denuncias/nuevaPost": {
         "post": {
           "tags": [
@@ -321,7 +282,7 @@
                 "name": "id",
                 "in": "path",
                 "required": true,
-                "description": "ID de la denuncia a modificar",
+                "description": "ID de la denuncia a aceptar",
                 "schema": {
                   "type": "integer"
                 }
@@ -329,11 +290,21 @@
           ],
           "responses": {
             "200": {
-              "description": "La denuncia fue actualizada cambiandole su estado a : 'resuelto' ",
+              "description": "La denuncia fue aceptada cambiandole su estado a : 'resuelto' ",
               "content": {
                 "application/json": {
                   "schema": {
-                    "$ref": "#/components/schemas/Denuncia"
+                    "type": "object",
+                    "properties": {
+                      "message": {
+                        "type": "string",
+                        "description": "Mensaje que informa el estado del endpoint"
+                      },
+                      "denunciaAceptada": {
+                        "type": "object",
+                        "description": "Informacion de la denuncia que ha sido aceptada"
+                      }
+                    }
                   }
                 }
               }
@@ -373,7 +344,13 @@
               "content": {
                 "application/json": {
                   "schema": {
-                    "$ref": "#/components/schemas/Denuncia"
+                    "type": "object",
+                    "properties": {
+                      "message":{
+                        "type": "string",
+                        "description": "Mensaje indicando el estado del enpoint"
+                      }
+                    }
                   }
                 }
               }
@@ -517,47 +494,8 @@
           "tags": [
             "Reclamos"
           ],
-          "summary": "Actualiza un reclamo dandola por resuelto",
-          "parameters": [
-            {
-              "name": "auth_token",
-              "in": "header",
-              "required": true,
-              "description": "Token de autorizacion",
-              "schema": {
-                "type": "string"
-              }
-            },
-            {
-                "name": "id",
-                "in": "path",
-                "required": true,
-                "description": "ID del reclamo a modificar",
-                "schema": {
-                  "type": "integer"
-                }
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "El reclamo fue actualizado cambiandole su estado a : 'resuelto' ",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "$ref": "#/components/schemas/Reclamo"
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
-      "/reclamos/aceptar/{id}": {
-        "post": {
-          "tags": [
-            "Reclamos"
-          ],
           "summary": "Rechaza un reclamo dandole de baja de la BD",
+
           "parameters": [
             {
               "name": "auth_token",
@@ -581,10 +519,67 @@
           "responses": {
             "200": {
               "description": "El reclamo fue rechazado siendo eliminado de la BD",
+
               "content": {
                 "application/json": {
                   "schema": {
-                    "$ref": "#/components/schemas/Reclamo"
+                    "type": "object",
+                    "properties": {
+                      "message":{
+                        "type": "string",
+                        "description": "Mensaje indicando el estado del enpoint"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "/reclamos/aceptar/{id}": {
+        "post": {
+          "tags": [
+            "Reclamos"
+          ],
+          "summary": "Acepta un reclamo dandola por resuelto",
+          "parameters": [
+            {
+              "name": "auth_token",
+              "in": "header",
+              "required": true,
+              "description": "Token de autorizacion",
+              "schema": {
+                "type": "string"
+              }
+            },
+            {
+                "name": "id",
+                "in": "path",
+                "required": true,
+                "description": "ID del reclamo a aceptar",
+                "schema": {
+                  "type": "integer"
+                }
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "El reclamo fue actualizado cambiandole su estado a : 'resuelto' ",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "properties": {
+                      "message": {
+                        "type": "string",
+                        "description": "Mensaje que informa el estado del endpoint"
+                      },
+                      "reclamoAceptado": {
+                        "type": "object",
+                        "description": "Informacion del reclamo que ha sido aceptado"
+                      }
+                    }
                   }
                 }
               }
